# viur-testing

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release-npm.yml  release-python.yml  release.yml  test.yml
docs/: dev-mirror-mode.md  getting-started.md  guarded-mode.md  index.md
docs/api/: config.md  runner.md  test.md  validator.md
docs/de/: dev-mirror-mode.md  getting-started.md  guarded-mode.md  index.md  viur3-patches.md
docs/de/api/: config.md  host.md  runner.md  test.md  validator.md
docs/en/: dev-mirror-mode.md  getting-started.md  guarded-mode.md  index.md  viur3-patches.md
docs/en/api/: host.md
docs/superpowers/plans/: 2026-06-15-single-env-var.md
docs/superpowers/specs/: 2026-06-15-single-env-var-design.md
playwright/: .npmrc  README.md  package-lock.json  package.json  tsconfig.json
playwright/src/: fixtures.ts  forbidden-imports.ts  global-setup.ts  global-teardown.ts  index.ts  mode-detect.ts  pin-challenge.ts  test-mode.ts  test-modules.ts  token-storage.ts  vite-plugin.ts
scripts/: dev_mirror_import.py
src/viur/testing/: __init__.py  activation.py  banner.py  cli.py  constants.py  mirror.py  mode.py  pin.py  protection.py  runner.py  validator.py
src/viur/testing/_test/: __init__.py  config.py
tests/: conftest.py  test_activation.py  test_banner.py  test_cli.py  test_config_module.py  test_mirror.py  test_mode.py  test_package.py  test_pin.py  test_protection.py  test_runner.py  test_test_container.py  test_validator.py
